--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>스타일산다</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mobile.css" />
 </head>
@@ -30,7 +32,7 @@
                 <img src="images/new2.jpg" alt="새로운사진2">
             </div>
         </div>
-        <div class="sns text-center text-upper"><h1>sttyle sanda</h1></div>
+        <div class="sns mx-auto text-center text-upper"><h1 class="sns-text ">style sanda</h1></div>
         <hr class="divider my-30">
         <h2 class="text-center delivery my-30"><u>Delivery</u></h2> 
         <p class="text-center delivery-text">배송기간 1~3일</p>
@@ -45,5 +47,6 @@
             <p class="ownership-en my-50">copyright&copy; 2017. <strong class="brand">Style Sanda</strong> All Rights Reserved.</p>
         </div>
     </div>
+    
 </body>
 </html>
